--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "index.js",
   "scripts": {
     "precommit": "bash scripts/pre-commit.sh",
-    "postversion": "git push --atomic --follow-tags origin develop develop:master",
     "start": "node index",
     "lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -36,6 +35,7 @@
     "millisecond": "^0.1.2",
     "nedb-promise": "^2.0.1",
     "node-fetch": "^2.2.0",
+    "npm": "^6.9.0",
     "ramda": "^0.25.0",
     "require-directory": "^2.1.1",
     "telegraf": "^3.25.0",
